# skills

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY-REVIEW-FIXES.md  local.env.example  scrub-history.sh  sync.sh
.claude-plugin/: marketplace.json  plugin.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: dream-skill-tests.yml  session-continue-ci.yml  voice-check-ci.yml
calendar-plan-skill/: .gitignore  CONTRIBUTING.md  LICENSE  setup.sh
claude/: SKILL.md  calendar-plan.sh  doctor.sh  setup.sh
claude-relay/: README.md
clean-wiki/: .gitignore  README.md  setup.sh
codex/: automation.example.toml  setup.sh
commands/: sync-phone.md
docs/: ARCHITECTURE.md  CONFIGURATION.md  INSTALL.md  INSTALLATION.md  MCP-SETUP.md  SETUP-MCPS.md  SHORTCUT-SETUP.md  TROUBLESHOOTING.md
dream-skill/: .gitignore  HARVEST.md  PLAN-01-vault-writer-edit-2026-06-03.md  PLAN-02-router-2026-06-03.md  PLAN-03-reconciler-2026-06-03.md  PLAN-04-orchestrator-2026-06-03.md  PLAN-OVERVIEW-2026-06-03.md  PLAN-v0.3.md  PLAN-warning-system.md  PLAN.md  README.md  REDESIGN-2026-06-03-on-demand-batch.md  REVIEW-2026-06-04-full-review.md  ROUTING.md  config.example.toml  requirements.txt  setup.sh
examples/: calendar-context.example.md  memory.example.md
gpt-5-6-relay/: README.md
prompts/: cron-prompt.md
routing-mode/: .gitignore  LICENSE  README.md
session-continue/: README.md  setup.sh  sync.sh
sync-phone/: .gitignore  CHANGELOG.md  README.md  local.env.example  setup.sh  sync.sh
tests/: test_preprocess.py
transcribe-audio/: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.sh
transcribe-audio/.claude-plugin/: marketplace.json  plugin.json
transcribe-audio/.github/workflows/: ci.yml
transcribe-audio/commands/: transcribe-audio.md
transcribe-audio/docs/: ARCHITECTURE.md  EXTENDING.md  SETUP.md
transcribe-audio/examples/: sample-output.md
transcribe-audio/skills/transcribe-audio/: SKILL.md
transcribe-audio/src/transcribe_audio/: __init__.py  audio.py  cli.py  config.py  obsidian.py  summarize.py  transcribe.py
transcribe-audio/src/transcribe_audio/templates/: obsidian_note.md.j2
transcribe-audio/src/transcribe_audio/templates/summary_styles/: action_items.txt  brief.txt  detailed.txt
transcribe-audio/tests/: conftest.py  test_audio.py  test_cli.py  test_config.py  test_obsidian.py  test_summarize.py  test_transcribe.py
voice-check/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.sh
voice-check/.claude-plugin/: marketplace.json  plugin.json
voice-check/commands/: voice-check.md
voice-check/data/input/: README.md
voice-check/docs/: ARCHITECTURE.md  EVALUATION.md  SETUP.md
voice-check/examples/contrast/ai_generic/: generic.jsonl
voice-check/examples/sample_corpus/speech/: standup.txt
voice-check/examples/sample_corpus/writing/: email_to_team.md  notes.jsonl
voice-check/scripts/: build_skill.py  check_draft.py  eval_voice_check.py  profile_corpus.py
voice-check/skills/voice-check/: SKILL.md
voice-check/src/voice_check/: __init__.py  checks.py  cli.py  corpus.py  eval.py  lexicons.py  profile.py  report.py  rewrite.py  skill_template.py  text.py
voice-check/tests/: conftest.py  test_build_skill.py  test_checks.py  test_cli_check.py  test_cli_profile.py  test_corpus.py  test_eval.py  test_examples_smoke.py  test_lexicons.py  test_profile.py  test_report.py  test_rewrite.py  test_text.py
(+264 files in other folders)
