[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voice-check"
version = "0.1.0"
description = "Audit and rewrite drafts in your own voice. Offline, standard-library only, with a measured voice profile and an ROC-AUC discrimination proof."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Bohdan Chuprynka" }]
keywords = ["writing", "voice", "style", "ai-detection", "editing", "claude", "codex"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
]

# Zero runtime dependencies — the deterministic core is standard library only.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
voice-check = "voice_check.cli:main"

[project.urls]
Homepage = "https://github.com/BohdanChuprynka/skills/tree/main/voice-check"
Repository = "https://github.com/BohdanChuprynka/skills"

[tool.hatch.build.targets.wheel]
packages = ["src/voice_check"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
